ezbot_shared/grammar/ScriptConnectorParser.py
# Generated from ScriptConnector.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ScriptConnectorParser ( Parser ):

    grammarFileName = "ScriptConnector.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", 
                     "')'", "'if'", "'then'", "'endif'", "'/message'", "'attachments'", 
                     "'embeds'", "'/agreement'", "'/verifyemail'", "'/verifycode'", 
                     "'/sendcaptcha'", "'retries'", "'/SendSurvey'", "'text'", 
                     "'mcq'", "'not'", "'and'", "'or'", "'in'", "'/let'", 
                     "'$'", "','", "'{'", "'}'", "'['", "']'", "':'", "';'", 
                     "'/CreateRole'", "'/AssignPermission'", "'/CreateChannel'", 
                     "'/RemovePermission'", "'/DeleteVoiceChannel'", "'/DeleteCategory'", 
                     "'/SetCategory'", "'/GetChannelInfo'", "'/GetMemberInfo'", 
                     "'/SetChannelRole'", "'/SetChannelVisibility'", "'/SetChannelMember'", 
                     "'/CreateCategory'", "'/AssignRole'", "'/DeleteRole'", 
                     "'/EditRole'", "'/EditChannel'", "'/EditCategory'", 
                     "'/RemoveRoleFromUser'", "'/KickMember'", "'/BanMember'", 
                     "'/UnbanMember'", "'/MoveUserToVoice'", "'/DisconnectUserFromVoice'", 
                     "'/TimeoutMember'", "'/RemoveTimeoutMember'", "'/EditMessage'", 
                     "'/DeleteMessage'", "'/BulkDeleteMessages'", "'/SetVoiceState'", 
                     "'/CreateThread'", "'/SetThreadArchived'", "<INVALID>", 
                     "'<='", "'>='", "'<>'", "'!='", "'<'", "'>'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IFKW", "THENKW", "ENDIFKW", "SLASHMESSAGE", "ATTACHMENTSKW", 
                      "EMBEDSKW", "AGREEMENT", "VERIFYEMAIL", "VERIFYCODE", 
                      "SENDCAPTCHA", "RETRIESKW", "SENDSURVEY", "TEXTKW", 
                      "MCQKW", "NOT", "AND", "OR", "IN", "LET", "DOLLAR", 
                      "COMMA", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COLON", 
                      "SEMI", "CREATEROLE", "ASSIGNPERMISSION", "CREATECHANNEL", 
                      "REMOVEPERMISSION", "DELETEVOICECHANNEL", "DELETECATEGORY", 
                      "SETCATEGORY", "GETCHANNELINFO", "GETMEMBERINFO", 
                      "SETCHANNELROLE", "SETCHANNELVISIBILITY", "SETCHANNELMEMBER", 
                      "CREATECATEGORY", "ASSIGNROLE", "DELETEROLE", "EDITROLE", 
                      "EDITCHANNEL", "EDITCATEGORY", "REMOVEROLEFROMUSER", 
                      "KICKMEMBER", "BANMEMBER", "UNBANMEMBER", "MOVEUSERTOVOICE", 
                      "DISCONNECTUSERFROMVOICE", "TIMEOUTMEMBER", "REMOVETIMEOUTMEMBER", 
                      "EDITMESSAGE", "DELETEMESSAGE", "BULKDELETEMESSAGES", 
                      "SETVOICESTATE", "CREATETHREAD", "SETTHREADARCHIVED", 
                      "DURATION_UNIT", "LE", "GE", "NE2", "NE", "LT", "GT", 
                      "EQ", "INT", "FILENAME", "FILESTRING", "BOOL", "ID", 
                      "STRING", "COMMENT", "WS", "NEWLINE" ]

    RULE_script = 0
    RULE_command = 1
    RULE_messageStmt = 2
    RULE_messageBody = 3
    RULE_messageTail = 4
    RULE_attachmentList = 5
    RULE_attachmentRef = 6
    RULE_agreementCommand = 7
    RULE_secondButtonLabel = 8
    RULE_agreementTarget = 9
    RULE_sendCaptchaStmt = 10
    RULE_captchaArg = 11
    RULE_verifyStmt = 12
    RULE_verifyCodeExpr = 13
    RULE_agreementExpr = 14
    RULE_letStmt = 15
    RULE_assignTarget = 16
    RULE_assignment_expr = 17
    RULE_additiveAssignmentExpr = 18
    RULE_multiplicativeAssignmentExpr = 19
    RULE_unaryAssignmentExpr = 20
    RULE_primary = 21
    RULE_varRef = 22
    RULE_ifStmt = 23
    RULE_boolExpr = 24
    RULE_boolTerm = 25
    RULE_boolFactor = 26
    RULE_comparison = 27
    RULE_compareOp = 28
    RULE_sendSurveyStmt = 29
    RULE_surveyItem = 30
    RULE_surveyLetDef = 31
    RULE_surveyKindInline = 32
    RULE_stringList = 33
    RULE_createRoleStmt = 34
    RULE_editRoleStmt = 35
    RULE_deleteRoleStmt = 36
    RULE_removeRoleFromUserStmt = 37
    RULE_assignPermissionStmt = 38
    RULE_removePermissionStmt = 39
    RULE_createChannelStmt = 40
    RULE_getChannelInfoStmt = 41
    RULE_getMemberInfoStmt = 42
    RULE_deleteVoiceChannelStmt = 43
    RULE_createCategoryStmt = 44
    RULE_deleteCategoryStmt = 45
    RULE_setCategoryStmt = 46
    RULE_setChannelRoleStmt = 47
    RULE_setChannelVisibilityStmt = 48
    RULE_setChannelMemberStmt = 49
    RULE_editChannelStmt = 50
    RULE_editCategoryStmt = 51
    RULE_assignRoleStmt = 52
    RULE_kickMemberStmt = 53
    RULE_banMemberStmt = 54
    RULE_unbanMemberStmt = 55
    RULE_moveUserToVoiceStmt = 56
    RULE_disconnectUserFromVoiceStmt = 57
    RULE_timeoutMemberStmt = 58
    RULE_removeTimeoutMemberStmt = 59
    RULE_editMessageStmt = 60
    RULE_deleteMessageStmt = 61
    RULE_bulkDeleteMessagesStmt = 62
    RULE_setVoiceStateStmt = 63
    RULE_createThreadStmt = 64
    RULE_setThreadArchivedStmt = 65
    RULE_duration = 66

    ruleNames =  [ "script", "command", "messageStmt", "messageBody", "messageTail", 
                   "attachmentList", "attachmentRef", "agreementCommand", 
                   "secondButtonLabel", "agreementTarget", "sendCaptchaStmt", 
                   "captchaArg", "verifyStmt", "verifyCodeExpr", "agreementExpr", 
                   "letStmt", "assignTarget", "assignment_expr", "additiveAssignmentExpr", 
                   "multiplicativeAssignmentExpr", "unaryAssignmentExpr", 
                   "primary", "varRef", "ifStmt", "boolExpr", "boolTerm", 
                   "boolFactor", "comparison", "compareOp", "sendSurveyStmt", 
                   "surveyItem", "surveyLetDef", "surveyKindInline", "stringList", 
                   "createRoleStmt", "editRoleStmt", "deleteRoleStmt", "removeRoleFromUserStmt", 
                   "assignPermissionStmt", "removePermissionStmt", "createChannelStmt", 
                   "getChannelInfoStmt", "getMemberInfoStmt", "deleteVoiceChannelStmt", 
                   "createCategoryStmt", "deleteCategoryStmt", "setCategoryStmt", 
                   "setChannelRoleStmt", "setChannelVisibilityStmt", "setChannelMemberStmt", 
                   "editChannelStmt", "editCategoryStmt", "assignRoleStmt", 
                   "kickMemberStmt", "banMemberStmt", "unbanMemberStmt", 
                   "moveUserToVoiceStmt", "disconnectUserFromVoiceStmt", 
                   "timeoutMemberStmt", "removeTimeoutMemberStmt", "editMessageStmt", 
                   "deleteMessageStmt", "bulkDeleteMessagesStmt", "setVoiceStateStmt", 
                   "createThreadStmt", "setThreadArchivedStmt", "duration" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    IFKW=8
    THENKW=9
    ENDIFKW=10
    SLASHMESSAGE=11
    ATTACHMENTSKW=12
    EMBEDSKW=13
    AGREEMENT=14
    VERIFYEMAIL=15
    VERIFYCODE=16
    SENDCAPTCHA=17
    RETRIESKW=18
    SENDSURVEY=19
    TEXTKW=20
    MCQKW=21
    NOT=22
    AND=23
    OR=24
    IN=25
    LET=26
    DOLLAR=27
    COMMA=28
    LBRACE=29
    RBRACE=30
    LBRACK=31
    RBRACK=32
    COLON=33
    SEMI=34
    CREATEROLE=35
    ASSIGNPERMISSION=36
    CREATECHANNEL=37
    REMOVEPERMISSION=38
    DELETEVOICECHANNEL=39
    DELETECATEGORY=40
    SETCATEGORY=41
    GETCHANNELINFO=42
    GETMEMBERINFO=43
    SETCHANNELROLE=44
    SETCHANNELVISIBILITY=45
    SETCHANNELMEMBER=46
    CREATECATEGORY=47
    ASSIGNROLE=48
    DELETEROLE=49
    EDITROLE=50
    EDITCHANNEL=51
    EDITCATEGORY=52
    REMOVEROLEFROMUSER=53
    KICKMEMBER=54
    BANMEMBER=55
    UNBANMEMBER=56
    MOVEUSERTOVOICE=57
    DISCONNECTUSERFROMVOICE=58
    TIMEOUTMEMBER=59
    REMOVETIMEOUTMEMBER=60
    EDITMESSAGE=61
    DELETEMESSAGE=62
    BULKDELETEMESSAGES=63
    SETVOICESTATE=64
    CREATETHREAD=65
    SETTHREADARCHIVED=66
    DURATION_UNIT=67
    LE=68
    GE=69
    NE2=70
    NE=71
    LT=72
    GT=73
    EQ=74
    INT=75
    FILENAME=76
    FILESTRING=77
    BOOL=78
    ID=79
    STRING=80
    COMMENT=81
    WS=82
    NEWLINE=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ScriptConnectorParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ScriptConnectorParser.NEWLINE)
            else:
                return self.getToken(ScriptConnectorParser.NEWLINE, i)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScriptConnectorParser.CommandContext)
            else:
                return self.getTypedRuleContext(ScriptConnectorParser.CommandContext,i)


        def getRuleIndex(self):
            return ScriptConnectorParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = ScriptConnectorParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 134
                self.match(ScriptConnectorParser.NEWLINE)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 8)) & ~0x3f) == 0 and ((1 << (_la - 8)) & 576460752169470665) != 0):
                self.state = 140
                self.command()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==83:
                    self.state = 141
                    self.match(ScriptConnectorParser.NEWLINE)
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self.match(ScriptConnectorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def messageStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.MessageStmtContext,0)


        def agreementCommand(self):
            return self.getTypedRuleContext(ScriptConnectorParser.AgreementCommandContext,0)


        def verifyStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.VerifyStmtContext,0)


        def letStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.LetStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.IfStmtContext,0)


        def sendCaptchaStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SendCaptchaStmtContext,0)


        def sendSurveyStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SendSurveyStmtContext,0)


        def createRoleStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.CreateRoleStmtContext,0)


        def assignPermissionStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.AssignPermissionStmtContext,0)


        def createChannelStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.CreateChannelStmtContext,0)


        def removePermissionStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.RemovePermissionStmtContext,0)


        def deleteVoiceChannelStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.DeleteVoiceChannelStmtContext,0)


        def deleteCategoryStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.DeleteCategoryStmtContext,0)


        def setCategoryStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetCategoryStmtContext,0)


        def setChannelRoleStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetChannelRoleStmtContext,0)


        def getChannelInfoStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.GetChannelInfoStmtContext,0)


        def setChannelVisibilityStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetChannelVisibilityStmtContext,0)


        def setChannelMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetChannelMemberStmtContext,0)


        def createCategoryStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.CreateCategoryStmtContext,0)


        def assignRoleStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.AssignRoleStmtContext,0)


        def deleteRoleStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.DeleteRoleStmtContext,0)


        def editRoleStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.EditRoleStmtContext,0)


        def editChannelStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.EditChannelStmtContext,0)


        def editCategoryStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.EditCategoryStmtContext,0)


        def removeRoleFromUserStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.RemoveRoleFromUserStmtContext,0)


        def kickMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.KickMemberStmtContext,0)


        def banMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.BanMemberStmtContext,0)


        def unbanMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.UnbanMemberStmtContext,0)


        def moveUserToVoiceStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.MoveUserToVoiceStmtContext,0)


        def disconnectUserFromVoiceStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.DisconnectUserFromVoiceStmtContext,0)


        def getMemberInfoStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.GetMemberInfoStmtContext,0)


        def timeoutMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.TimeoutMemberStmtContext,0)


        def removeTimeoutMemberStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.RemoveTimeoutMemberStmtContext,0)


        def editMessageStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.EditMessageStmtContext,0)


        def deleteMessageStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.DeleteMessageStmtContext,0)


        def bulkDeleteMessagesStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.BulkDeleteMessagesStmtContext,0)


        def setVoiceStateStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetVoiceStateStmtContext,0)


        def createThreadStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.CreateThreadStmtContext,0)


        def setThreadArchivedStmt(self):
            return self.getTypedRuleContext(ScriptConnectorParser.SetThreadArchivedStmtContext,0)


        def getRuleIndex(self):
            return ScriptConnectorParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ScriptConnectorParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.messageStmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.agreementCommand()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.verifyStmt()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.letStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.ifStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 159
                self.sendCaptchaStmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 160
                self.sendSurveyStmt()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 8)
                self.state = 161
                self.createRoleStmt()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 9)
                self.state = 162
                self.assignPermissionStmt()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 10)
                self.state = 163
                self.createChannelStmt()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 11)
                self.state = 164
                self.removePermissionStmt()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 12)
                self.state = 165
                self.deleteVoiceChannelStmt()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 13)
                self.state = 166
                self.deleteCategoryStmt()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 14)
                self.state = 167
                self.setCategoryStmt()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 15)
                self.state = 168
                self.setChannelRoleStmt()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 16)
                self.state = 169
                self.getChannelInfoStmt()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 17)
                self.state = 170
                self.setChannelVisibilityStmt()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 18)
                self.state = 171
                self.setChannelMemberStmt()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 19)
                self.state = 172
                self.createCategoryStmt()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 20)
                self.state = 173
                self.assignRoleStmt()
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 21)
                self.state = 174
                self.deleteRoleStmt()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 22)
                self.state = 175
                self.editRoleStmt()
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 23)
                self.state = 176
                self.editChannelStmt()
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 24)
                self.state = 177
                self.editCategoryStmt()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 25)
                self.state = 178
                self.removeRoleFromUserStmt()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 26)
                self.state = 179
                self.kickMemberStmt()
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 27)
                self.state = 180
